feat: add Cashu token support with display and interaction components

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/router": "^20.2.1",
     "@angular/service-worker": "^20.2.1",
     "@angular/ssr": "^20.2.0",
+    "@cashu/cashu-ts": "^2.7.4",
     "@getalby/sdk": "^6.0.2",
     "@noble/hashes": "^2.0.1",
     "@progress/jszip-esm": "^1.0.4",
