--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cors": "^2.8.5",
     "dompurify": "^3.3.0",
     "express": "^5.1.0",
+    "hls.js": "^1.6.14",
     "idb": "^8.0.3",
     "marked": "^17.0.0",
     "nostr-tools": "^2.17.2",
@@ -63,6 +64,7 @@
     "@angular/localize": "^20.2.1",
     "@tauri-apps/cli": "^2",
     "@types/express": "^5.0.3",
+    "@types/hls.js": "^0.13.3",
     "@types/jasmine": "~5.1.9",
     "@types/node": "^24.3.0",
     "@types/ws": "^8.18.1",
