--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "@progress/jszip-esm": "^1.0.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@xenova/transformers": "^2.17.2",
     "blurhash": "^2.0.5",
     "cors": "^2.8.5",
     "dompurify": "^3.3.0",
     "express": "^5.1.0",
-    "hls.js": "^1.6.14",
+    "hls.js": "^1.6.15",
     "idb": "^8.0.3",
     "marked": "^17.0.0",
     "nostr-tools": "^2.17.2",
