Implement Share Target feature: handle sharing content via service worker and integrate with NoteEditorDialog

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/locale"
+              "src/locale",
+              "src/service-worker.js"
             ],
             "styles": [
               "src/styles.scss"
